--- a/stylee.css
+++ b/stylee.css
@@ -26,7 +26,7 @@ body {
   .bar {
     width: 10px;
     margin: 0 1px;
-    background-color: yellow;
+    background-color: blue;
   }
   
   .btn-container {
